Add environment configuration and improve stream management
- Introduced a new `.env.example` file for local QA stream configuration, detailing private stream URLs and optional playback paths.
- Updated `.gitignore` to exclude environment configuration files from version control.
- Enhanced `StreamManager` to manage connection lifecycle states and improve error handling during stream loading.
- Added `TestStreamConfig` for environment-driven stream configuration, facilitating local and CI testing.
- Improved `MPVPlayerWrapper` to support headless mode and refined event handling for better stream state management.

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,7 @@ Temporary Items
 
 # Application Support
 ~/Library/Application Support/SharpStream/
+
+# Local QA stream configuration (never commit private endpoints)
+.env
+.env.local
