Update Smart Pause functionality and enhance user experience
- Introduced Smart Pause feature with diagnostics and selection logic for improved frame scoring.
- Enhanced FocusScorer to support playback time tracking and frame selection based on recent frames.
- Updated StreamManager to manage Smart Pause sampling tiers based on CPU and memory conditions.
- Improved MPVPlayerWrapper to handle frame extraction with playback time, enhancing frame scoring accuracy.
- Refined ControlsView to display Smart Pause selection feedback and improve user interaction during playback.
- Added SmartPauseDiagnostics and SmartPauseSelection models for structured data handling during Smart Pause operations.
- Updated README.md and IMPLEMENTATION_PROGRESS.md to reflect new features and changes.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-# Copy this file to `.env` for local QA only. Do not commit real stream URLs.
+# Copy to .env and fill in your values. .env is gitignored.
+# Used by development docs and test scripts (e.g. Smart Pause validation).
 
-# Primary private QA stream used for local smoke tests.
-SHARPSTREAM_TEST_RTSP_URL=rtsp://YOUR_PRIVATE_HOST:554/live
+# Path to a local test video file (e.g. test.MOV in project root)
+SHARPSTREAM_TEST_VIDEO_FILE=
 
-# Optional local file path used for playback/seek/smart-pause smoke tests.
-# SHARPSTREAM_TEST_VIDEO_FILE=/absolute/path/to/test.mp4
+# Optional: RTSP URL for live-stream tests
+SHARPSTREAM_TEST_RTSP_URL=
 
-# Optional comma-separated fallback stream list.
-# SHARPSTREAM_TEST_STREAMS=rtsp://host1:554/live,https://example.com/stream.m3u8
+# Optional: Custom path for debug log (default: ~/Library/Application Support/SharpStream/debug.log)
+# SHARPSTREAM_DEBUG_LOG_PATH=
