Enhance stream management and user interaction features
- Updated `.env.example` to include an example RTSP URL for live-stream tests.
- Improved `AppMenu` to add a "Save Current Stream..." option, allowing users to save their current stream state.
- Introduced `CopyCommandMode` enum to manage copy options (OCR text or frame) and updated clipboard functionality accordingly.
- Enhanced `StreamDatabase` with methods to retrieve and save streams by URL, improving stream management.
- Added `LiveDVRState` and `LiveBufferSettings` structures to support live DVR functionality and buffer management.
- Updated `StreamManager` to handle live DVR state and buffer settings, improving user experience during live streaming.
- Enhanced `ControlsView` to manage live scrubbing and display relevant information for live buffered streams.
- Improved `ExportView` to handle quick saving of frames and integrate new copy functionality.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Path to a local test video file (e.g. test.MOV in project root)
 SHARPSTREAM_TEST_VIDEO_FILE=
 
-# Optional: RTSP URL for live-stream tests
+# Optional: RTSP URL for live-stream tests (example: rtsp://192.168.8.10:554/live/1_0)
 SHARPSTREAM_TEST_RTSP_URL=
 
 # Optional: Custom path for debug log (default: ~/Library/Application Support/SharpStream/debug.log)
