--- a/SharpStream/Resources/SharpStream.entitlements
+++ b/SharpStream/Resources/SharpStream.entitlements
@@ -7,7 +7,7 @@
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.network.server</key>
-	<false/>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 	<key>com.apple.security.files.downloads.read-write</key>
